--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "require-dev": {
         "doctrine/annotations": "^1.13.1|^2",
         "doctrine/persistence": "^1.3|^2|^3",
+        "seld/jsonlint": "^1.10",
         "symfony/asset": "^5.4|^6.0|^7.0",
         "symfony/asset-mapper": "^6.3|^7.0",
         "symfony/browser-kit": "^5.4|^6.0|^7.0",
@@ -58,7 +59,7 @@
         "symfony/scheduler": "^6.3|^7.0",
         "symfony/security-bundle": "^5.4|^6.0|^7.0",
         "symfony/semaphore": "^5.4|^6.0|^7.0",
-        "symfony/serializer": "^6.3|^7.0",
+        "symfony/serializer": "^6.4|^7.0",
         "symfony/stopwatch": "^5.4|^6.0|^7.0",
         "symfony/string": "^5.4|^6.0|^7.0",
         "symfony/translation": "^6.2.8|^7.0",
@@ -90,7 +91,7 @@
         "symfony/mime": "<6.2",
         "symfony/property-info": "<5.4",
         "symfony/property-access": "<5.4",
-        "symfony/serializer": "<6.3",
+        "symfony/serializer": "<6.4",
         "symfony/security-csrf": "<5.4",
         "symfony/security-core": "<5.4",
         "symfony/stopwatch": "<5.4",
