--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "doctrine/persistence": "^1.3|^2|^3",
         "seld/jsonlint": "^1.10",
         "symfony/asset": "^5.4|^6.0|^7.0",
-        "symfony/asset-mapper": "^6.3|^7.0",
+        "symfony/asset-mapper": "^6.4|^7.0",
         "symfony/browser-kit": "^5.4|^6.0|^7.0",
         "symfony/console": "^5.4.9|^6.0.9|^7.0",
         "symfony/clock": "^6.2|^7.0",
@@ -79,6 +79,7 @@
         "phpdocumentor/reflection-docblock": "<3.2.2",
         "phpdocumentor/type-resolver": "<1.4.0",
         "symfony/asset": "<5.4",
+        "symfony/asset-mapper": "<6.4",
         "symfony/clock": "<6.3",
         "symfony/console": "<5.4",
         "symfony/dotenv": "<5.4",
