[FrameworkBundle] Deprecate not setting some options (uid, validation)

--- a/Tests/DependencyInjection/Fixtures/yml/full.yml
+++ b/Tests/DependencyInjection/Fixtures/yml/full.yml
@@ -49,6 +49,7 @@ framework:
         paths: ['%kernel.project_dir%/Fixtures/translations']
     validation:
         enabled: true
+        email_validation_mode: html5
     annotations: false
     serializer:
          enabled:                    true
