--- a/Tests/DependencyInjection/Fixtures/yml/validation_legacy_annotations.yml
+++ b/Tests/DependencyInjection/Fixtures/yml/validation_legacy_annotations.yml
@@ -9,6 +9,7 @@ framework:
     validation:
         enabled:     true
         enable_annotations: true
+        email_validation_mode: html5
 
 services:
     validator.alias:
