--- a/Tests/DependencyInjection/Fixtures/yml/validation_no_static_method.yml
+++ b/Tests/DependencyInjection/Fixtures/yml/validation_no_static_method.yml
@@ -7,4 +7,5 @@ framework:
     secret: s3cr3t
     validation:
         enabled:       true
+        email_validation_mode: html5
         static_method: false
