--- a/Tests/DependencyInjection/Fixtures/yml/validation_translation_domain.yml
+++ b/Tests/DependencyInjection/Fixtures/yml/validation_translation_domain.yml
@@ -5,4 +5,5 @@ framework:
     php_errors:
         log: true
     validation:
+        email_validation_mode: html5
         translation_domain: messages
