--- a/Tests/DependencyInjection/Fixtures/yml/validation_auto_mapping.yml
+++ b/Tests/DependencyInjection/Fixtures/yml/validation_auto_mapping.yml
@@ -6,6 +6,7 @@ framework:
     log: true
   property_info: { enabled: true }
   validation:
+    email_validation_mode: html5
     auto_mapping:
       'App\': ['foo', 'bar']
       'Symfony\': ['a', 'b']
