--- a/Tests/DependencyInjection/Fixtures/yml/validation_mapping.yml
+++ b/Tests/DependencyInjection/Fixtures/yml/validation_mapping.yml
@@ -5,6 +5,7 @@ framework:
   php_errors:
     log: true
   validation:
+    email_validation_mode: html5
     mapping:
       paths:
         - "%kernel.project_dir%/Fixtures/TestBundle/Resources/config/validation_mapping/files"
