[FrameworkBundle][Validator] Deprecate annotation occurrences

--- a/Tests/DependencyInjection/Fixtures/yml/serializer_mapping.yml
+++ b/Tests/DependencyInjection/Fixtures/yml/serializer_mapping.yml
@@ -5,7 +5,7 @@ framework:
         log: true
     annotations: false
     serializer:
-        enable_annotations: true
+        enable_attributes: true
         mapping:
             paths:
                 - "%kernel.project_dir%/Fixtures/TestBundle/Resources/config/serializer_mapping/files"
