--- a/Tests/DependencyInjection/Fixtures/yml/serializer_mapping_without_annotations.yml
+++ b/Tests/DependencyInjection/Fixtures/yml/serializer_mapping_without_annotations.yml
@@ -5,7 +5,7 @@ framework:
     php_errors:
         log: true
     serializer:
-        enable_annotations: false
+        enable_attributes: false
         mapping:
             paths:
                 - "%kernel.project_dir%/Fixtures/TestBundle/Resources/config/serializer_mapping/files"
