--- a/Tests/DependencyInjection/Fixtures/yml/validation_legacy_annotations.yml
+++ b/Tests/DependencyInjection/Fixtures/yml/validation_legacy_annotations.yml
@@ -8,7 +8,7 @@ framework:
     secret: s3cr3t
     validation:
         enabled:     true
-        enable_annotations: true
+        enable_attributes: true
         email_validation_mode: html5
 
 services:
