--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "symfony/error-handler": "^6.1|^7.0",
         "symfony/event-dispatcher": "^5.4|^6.0|^7.0",
         "symfony/http-foundation": "^6.4|^7.0",
-        "symfony/http-kernel": "^6.4|^7.0",
+        "symfony/http-kernel": "^6.4",
         "symfony/polyfill-mbstring": "~1.0",
         "symfony/filesystem": "^5.4|^6.0|^7.0",
         "symfony/finder": "^5.4|^6.0|^7.0",
