--- a/composer.json
+++ b/composer.json
@@ -83,15 +83,16 @@
         "symfony/clock": "<6.3",
         "symfony/console": "<5.4",
         "symfony/dotenv": "<5.4",
-        "symfony/dom-crawler": "<6.3",
+        "symfony/dom-crawler": "<6.4",
         "symfony/http-client": "<6.3",
         "symfony/form": "<5.4",
         "symfony/lock": "<5.4",
         "symfony/mailer": "<5.4",
         "symfony/messenger": "<6.3",
-        "symfony/mime": "<6.2",
+        "symfony/mime": "<6.4",
         "symfony/property-info": "<5.4",
         "symfony/property-access": "<5.4",
+        "symfony/scheduler": "<6.4",
         "symfony/serializer": "<6.4",
         "symfony/security-csrf": "<5.4",
         "symfony/security-core": "<5.4",
