--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "require-dev": {
         "doctrine/annotations": "^1.13.1|^2",
         "doctrine/persistence": "^1.3|^2|^3",
+        "dragonmantank/cron-expression": "^3.1",
         "seld/jsonlint": "^1.10",
         "symfony/asset": "^5.4|^6.0|^7.0",
         "symfony/asset-mapper": "^6.4|^7.0",
