fix lowest deps

--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,7 @@
         "symfony/notifier": "^5.4|^6.0|^7.0",
         "symfony/process": "^5.4|^6.0|^7.0",
         "symfony/rate-limiter": "^5.4|^6.0|^7.0",
-        "symfony/scheduler": "^6.4|^7.0",
+        "symfony/scheduler": "^6.4.3|^7.0.3",
         "symfony/security-bundle": "^5.4|^6.0|^7.0",
         "symfony/semaphore": "^5.4|^6.0|^7.0",
         "symfony/serializer": "^6.4|^7.0",
@@ -93,7 +93,7 @@
         "symfony/mime": "<6.4",
         "symfony/property-info": "<5.4",
         "symfony/property-access": "<5.4",
-        "symfony/scheduler": "<6.4",
+        "symfony/scheduler": "<6.4.3|>=7.0.0,<7.0.3",
         "symfony/serializer": "<6.4",
         "symfony/security-csrf": "<5.4",
         "symfony/security-core": "<5.4",
