--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
         "symfony/property-info": "^4.4|^5.0|^6.0",
         "symfony/web-link": "^4.4|^5.0|^6.0",
         "phpdocumentor/reflection-docblock": "^3.0|^4.0|^5.0",
-        "twig/twig": "^2.10|~3.8.0"
+        "twig/twig": "^2.10|^3.0.4"
     },
     "conflict": {
         "doctrine/annotations": "<1.13.1",
