[Serializer] Introduce named serializers

--- a/Tests/DependencyInjection/Fixtures/yml/full.yml
+++ b/Tests/DependencyInjection/Fixtures/yml/full.yml
@@ -57,6 +57,12 @@ framework:
          max_depth_handler:          my.max.depth.handler
          default_context:
              enable_max_depth: true
+         named_serializers:
+             api:
+                 include_built_in_normalizers: true
+                 include_built_in_encoders: true
+                 default_context:
+                     enable_max_depth: false
     type_info: ~
     property_info: ~
     ide: file%%link%%format
