[FrameworkBundle] Fix service reset between tests

--- a/Tests/Functional/app/TestServiceContainer/services.yml
+++ b/Tests/Functional/app/TestServiceContainer/services.yml
@@ -13,3 +13,8 @@ services:
         arguments:
             - '@Symfony\Bundle\FrameworkBundle\Tests\Functional\Bundle\TestBundle\TestServiceContainer\NonPublicService'
             - '@Symfony\Bundle\FrameworkBundle\Tests\Functional\Bundle\TestBundle\TestServiceContainer\PrivateService'
+
+    Symfony\Bundle\FrameworkBundle\Tests\Functional\Bundle\TestBundle\TestServiceContainer\ResettableService:
+        public: true
+        tags:
+            - kernel.reset: { method: 'myCustomName' }
