[FrameworkBundle][Lock] Fix certain DSNs identified as service IDs

--- a/Tests/DependencyInjection/Fixtures/yml/lock_named.yml
+++ b/Tests/DependencyInjection/Fixtures/yml/lock_named.yml
@@ -12,3 +12,5 @@ framework:
         bar: flock
         baz: [semaphore, flock]
         qux: "%env(REDIS_DSN)%"
+        corge: in-memory
+        grault: mysql:host=localhost;dbname=test
