[FrameworkBundle] Fix `NullStore` registration

--- a/Tests/DependencyInjection/Fixtures/yml/lock_named.yml
+++ b/Tests/DependencyInjection/Fixtures/yml/lock_named.yml
@@ -14,3 +14,4 @@ framework:
         qux: "%env(REDIS_DSN)%"
         corge: in-memory
         grault: mysql:host=localhost;dbname=test
+        garply: 'null'
