[FrameworkBundle] Bump `symfony/http-kernel`

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "symfony/error-handler": "^6.4|^7.0",
         "symfony/event-dispatcher": "^6.4|^7.0",
         "symfony/http-foundation": "^6.4|^7.0",
-        "symfony/http-kernel": "^6.4|^7.0",
+        "symfony/http-kernel": "^7.2",
         "symfony/polyfill-mbstring": "~1.0",
         "symfony/filesystem": "^7.1",
         "symfony/finder": "^6.4|^7.0",
@@ -59,7 +59,7 @@
         "symfony/scheduler": "^6.4.4|^7.0.4",
         "symfony/security-bundle": "^6.4|^7.0",
         "symfony/semaphore": "^6.4|^7.0",
-        "symfony/serializer": "^6.4|^7.0",
+        "symfony/serializer": "^7.1",
         "symfony/stopwatch": "^6.4|^7.0",
         "symfony/string": "^6.4|^7.0",
         "symfony/translation": "^6.4|^7.0",
@@ -95,9 +95,9 @@
         "symfony/property-access": "<6.4",
         "symfony/runtime": "<6.4.13|>=7.0,<7.1.6",
         "symfony/scheduler": "<6.4.4|>=7.0.0,<7.0.4",
-        "symfony/serializer": "<6.4",
         "symfony/security-csrf": "<7.2",
         "symfony/security-core": "<6.4",
+        "symfony/serializer": "<7.1",
         "symfony/stopwatch": "<6.4",
         "symfony/translation": "<6.4",
         "symfony/twig-bridge": "<6.4",
